# DJANGO_SITE

./: README.md
django_site/: pyproject.toml
django_site/django_site/: settings.py  urls.py
django_site/main/: models.py  urls.py  views.py
django_site/main/locale/en/LC_MESSAGES/: django.po
django_site/main/locale/fr/LC_MESSAGES/: django.po
django_site/main/migrations/: 0001_initial.py
django_site/main/templates/main/: article_list.html  chatbot.html
